# Veriqan

./: .gitattributes  .gitignore  AGENTS.md  AUDIT_REMEDIATION_PLAN.md  AUDIT_REMEDIATION_PLAN_R1.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE_SHORT.txt  COMPREHENSIVE_CODE_AUDIT_PROMPT.md  COVERAGE.md  Code_Audit_Report_Audit05122005.md  CoverageReport.md  DOCUMENT_GENERATOR_MANUAL.md  ExtractionE2E.md  HANDOFF_NEXT_SESSION.md  PHASE2_TASK4_ANALYSIS.md  PropostaPostFunding.md  SESSION_SUMMARY_2025-01-24.md  TEST_RESTORATION_INCREMENTAL_PLAN.md  TEST_RESTORATION_PLAN.md  TEST_RESTORATION_PLAN_REVISED.md  VEC_STATEMENT_FEASIBILITY_ASSESSMENT.md  add_remaining_fields.py  all-files.txt  cleanup_entities.py  commit-all-changes.ps1  consolidated_entity_catalog.json  coverage.runsettings  extract_authorities.py  extracted_authorities.json  extracted_authorities_clean.json  fusion_methods_output.txt  generate_bulk_documents.ps1  generate_bulk_documents.py  generate_fusion_methods.py  generate_test_batch.py  kill-build-processes-admin.ps1  kill-build-processes.ps1  merge_catalogs.py  nuclear-clean-blazor.ps1  package-lock.json  (+7 more)
.serena/: project.yml
Prisma/Code/Src/Python/Prisma-dumy-generator-AAA/: Automatización de Requerimientos Bancarios en México.md  DumyPrisma1.md  OCR_PIPELINE_MANUAL.md  accion_solicitada_cli.py  bank_statement_validator.py  client_demo.py  document_generator.py  expediente_cli.py  fictitious_requerimientos_raw.md  gemini.md  generate_corpus.py  generate_test_corpus.py  generated_expediente.xml  generated_expediente_autonomous.xml  ocr_benchmark.py  ocr_pipeline.py  ollama_client.py  ollama_orchestrator.py  parse_prp1_documents.py  prompt_template.txt  pyproject.toml  requerimientos_schema.json  requirements.txt  simulate_documents_old.py  smolvlm_extractor.py  test_corpus.json
Prisma/Fixtures/generators/AAA/: .gitignore  ARCHITECTURE.md  DataTemplate.md  VALIDATION_STRATEGY.md  VISUAL_FIDELITY_PLAN.md  entities.json  generate_chaotic_corpus.py  generate_documents.py  pyproject.toml  requirements.txt  test_cnbv_basic_validation.py  test_cnbv_fidelity.py  test_cnbv_with_ocr.py  test_document_structure.py
Prisma/Fixtures/generators/AAA/prp1_generator/: __init__.py  authority_templates.py  chaos_simulator.py  cnbv_pdf_generator.py  cnbv_schema.py  config.py  ollama_client.py  ollama_orchestrator.py  validators.py  visual_similarity.py
(+2654 files in other folders)
