[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "argparse>=1.4.0",
    "matplotlib>=3.10.5",
    "num2words>=0.5.14",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.1.1",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "protobuf>=6.32.0",
    "pydantic>=2.11.7",
    "python-doctr>=1.0.0",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
    "verovio>=5.5.0",
]
